fix width/height spacing (cont)

--- a/assets/css/ted.css
+++ b/assets/css/ted.css
@@ -26,18 +26,18 @@
     color: rgb(34, 34, 34) !important;
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
     font-weight: 400 !important;
-    font-size: 14px !important;
-    line-height: 18px !important;
-    margin-top: 12px !important;
+    font-size: .875rem !important;
+    line-height: 1.125rem !important;
+    margin-top: .75rem !important;
   }
   @media (min-width: 744px){
     ._1dhyp9b {
       color: rgb(34, 34, 34) !important;
       font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
       font-weight: 400 !important;
-      font-size: 16px !important;
-      line-height: 20px !important;
-      margin-top: 16px !important;
+      font-size: 1rem !important;
+      line-height: 1.25rem !important;
+      margin-top: 1rem !important;
     }
   }
   
@@ -319,12 +319,21 @@
 /* PRODUCT_PLUS-SPECIFIC CLASSES */
 ._114q92b {
 	flex: 1 0 auto !important;
-	margin-left: 8px !important;
+	margin-left: .5rem !important;
+}
+
+._kt2egw {
+	color: rgb(113, 113, 113) !important;
+	font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif !important;
+	font-weight: 400 !important;
+	font-size: .875rem !important;
+	line-height: 1.125rem !important;
+	margin-top: .25rem !important;
 }
 
 
 @media (min-width: 744px){
   ._1lplc7 {
-    flex: 0 0 72px !important;
+    flex: 0 0 4.5rem !important;
   }
 }
